--- a/liff/scss/style.css
+++ b/liff/scss/style.css
@@ -1,512 +1,36 @@
 @charset "UTF-8";
-.serif {
-  font-family: "源ノ明朝", serif;
-}
-
 body {
   font-family: "源ノ角ゴシック JP", sans-serif;
 }
 
-section {
-  opacity: 0;
-  transition: 0.3s all;
+.form-question {
+  padding: 8px;
+  border-radius: 4px;
+  margin-bottom: 0 0 24px;
+}
+.form-question .form-question-title {
+  display: flex;
+  background-color: #98AFD7;
+}
+.form-question .form-question-title:first-of-type {
+  width: 8em;
+  margin: 0 2em 0 0;
+}
+.form-question .form-question-title:nth-of-type(2) {
+  width: 2em;
+  padding: 8px;
+  background-color: #93AAD4;
 }
 
-.fadein {
-  opacity: 1;
+.form-submit {
+  width: 100%;
+  height: 48px;
+  background-color: #94DF84;
 }
-
-.sp-br {
+.form-submit input {
   display: block;
-}
-@media (min-width: 768px) {
-  .sp-br {
-    display: none;
-  }
-}
-
-.sp-tab-show-member-table {
-  display: table;
-}
-@media (min-width: 1200px) {
-  .sp-tab-show-member-table {
-    display: none;
-  }
-}
-
-.pc-show-member-table {
-  display: none;
-}
-@media (min-width: 1200px) {
-  .pc-show-member-table {
-    display: table;
-  }
-}
-
-.top-home {
-  position: relative;
-  width: 100%;
-  padding: 30px 0 90px;
-  margin-bottom: 0;
-  background-image: url("../img/home.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 0;
-}
-.top-home .top-logo-wrapper {
-  color: #fff;
-  margin-bottom: 30px;
-}
-.top-home .top-logo-wrapper img {
-  display: block;
-  width: 48px;
-}
-.top-home .top-logo-wrapper p {
-  display: inline-block;
-  margin-left: 2px;
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  .top-home .top-logo-wrapper {
-    display: inline-block;
-  }
-  .top-home .top-logo-wrapper img {
-    width: 64px;
-  }
-  .top-home .top-logo-wrapper p {
-    margin-left: 7px;
-    font-size: 16px;
-  }
-}
-.top-home h1 {
-  margin-bottom: 30px;
-  color: #fff;
-  font-size: 64px;
-  font-weight: 900;
-  letter-spacing: 0;
-  text-shadow: 0 0 9px rgba(3, 0, 0, 0.25);
-  line-height: 1;
-}
-.top-home h1 p {
-  padding: 0 2px 6px 2px;
-  border: 3.15px solid #fff;
-  margin-bottom: -24px;
-}
-.top-home h1 span {
-  font-size: 32px;
-}
-.top-home .top-creater-wrapper {
-  position: relative;
-  padding: 0;
-  bottom: -30px;
-  left: 0;
-  color: #fff;
-}
-@media (min-width: 992px) {
-  .top-home .top-creater-wrapper {
-    display: inline-block;
-    bottom: -60px;
-    left: calc(100% - 220px);
-  }
-}
-.top-home .top-creater-wrapper .col {
-  padding: 0;
-}
-
-.navbar.index-fixed {
-  position: fixed;
-  width: 100%;
-  top: 90px;
-  left: 0;
-  z-index: 9999;
-}
-
-.navbar-lower {
-  position: fixed;
-  width: 100%;
-  top: 90px;
-  left: 0;
-  z-index: 9999;
-}
-
-.navbar-dark {
-  background-color: #5b5d5a;
-}
-
-.top-contents-wrapper {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-.top-contents-wrapper .top-news {
-  padding-top: 30px;
-  margin-bottom: 60px;
-}
-.top-contents-wrapper .top-news img {
-  margin-bottom: 60px;
-}
-.top-contents-wrapper .top-news h2 {
-  font-size: 24px;
-  margin-bottom: 45px;
-}
-.top-contents-wrapper .top-about {
-  padding-top: 30px;
-  margin-bottom: 60px;
-}
-.top-contents-wrapper .top-about h2 {
-  font-size: 24px;
-  margin-bottom: 45px;
-}
-.top-contents-wrapper .top-about p {
-  margin-bottom: 45px;
-  line-height: 1.5;
-}
-.top-contents-wrapper .top-about .top-about-link {
-  display: block;
-  width: 100%;
-  padding: 13px 0;
-  margin: 0 auto;
-  color: #fff;
-  font-size: 18px;
-  font-weight: bold;
-  text-align: center;
-  background-color: #666;
-}
-@media (min-width: 768px) {
-  .top-contents-wrapper .top-about .top-about-link {
-    width: 33.333333%;
-    min-width: 240px;
-  }
-}
-.top-contents-wrapper .top-howto {
-  margin-bottom: 60px;
-}
-.top-contents-wrapper .top-howto h2 {
-  font-size: 24px;
-  margin-bottom: 45px;
-}
-.top-contents-wrapper .top-howto img {
-  width: 100%;
-  margin-bottom: 45px;
-}
-.top-contents-wrapper .top-howto .top-howto-link {
-  display: block;
-  width: 100%;
-  padding: 13px 0;
-  margin: 0 auto;
-  color: #fff;
-  font-size: 18px;
-  font-weight: bold;
-  text-align: center;
-  background-color: #666;
-}
-@media (min-width: 768px) {
-  .top-contents-wrapper .top-howto .top-howto-link {
-    width: 33.333333%;
-    min-width: 240px;
-  }
-}
-
-footer {
-  padding: 48px 0 120px;
-  background-color: #333333;
-}
-footer address p {
-  color: #fff;
-  line-height: 1.5;
-}
-footer address p span {
-  font-size: 24px;
-  line-height: 2;
-}
-
-.back-to-top {
-  position: fixed;
-  width: 72px;
-  height: 72px;
-  bottom: 30px;
-  right: 30px;
-  padding: 0 0 0 11px;
-  border: 2px solid #fff;
-  border-radius: 50%;
-  background-color: #858585;
-  transition: 0.3s;
-  opacity: 0;
-  z-index: 9999;
-}
-.back-to-top i {
-  color: #fff;
-  font-size: 60px;
-  line-height: 68px;
-}
-.back-to-top:hover {
-  color: #fff;
-}
-.back-to-top.animation {
-  opacity: 1;
-}
-
-.youtube {
-  width: 100%;
-  aspect-ratio: 16/9;
-}
-
-.youtube iframe {
   width: 100%;
   height: 100%;
-}
-
-.common-header {
-  background-color: #fff;
-  padding: 15px 0;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  z-index: 9999;
-}
-.common-header.index-fixed {
-  display: block !important;
-}
-.common-header a {
-  text-decoration: none;
-}
-.common-header img {
-  width: auto;
-  height: 60px;
-  margin-right: 15px;
-}
-.common-header .header-name {
-  color: #000;
-  font-size: 26px;
-  font-weight: 900;
-  letter-spacing: 0;
-  text-shadow: 0 0 9px rgba(252, 255, 255, 0.25);
-}
-.common-header .header-name p {
-  margin-bottom: 0;
-  line-height: 60px;
-}
-.common-header .header-name span {
-  font-size: 28spx;
-  font-weight: 500;
-}
-
-.lower-contents-wrapper {
-  padding-top: 30px;
-  padding-bottom: 30px;
-  margin-top: 170px;
-}
-.lower-contents-wrapper .lower-section-title {
-  border-bottom: 1px solid #000;
-  margin-bottom: 60px;
-  font-size: 30px;
-  line-height: 1.5;
-}
-.lower-contents-wrapper section {
-  padding-top: 30px;
-  margin-bottom: 60px;
-}
-.lower-contents-wrapper section:last-of-type {
-  padding-top: 0;
-}
-.lower-contents-wrapper section .lower-section-subtitle {
-  border-bottom: 1px solid #000;
-  margin-bottom: 60px;
-  font-size: 24px;
-  line-height: 1.5;
-  text-align: center;
-}
-.lower-contents-wrapper section .lower-small-title {
-  display: inline-block;
-  position: relative;
-  left: 50%;
-  margin-bottom: 45px;
-  font-size: 20px;
-  font-weight: 900;
-  line-height: 1.5;
-  transform: translateX(-50%);
-}
-.lower-contents-wrapper section .lower-small-title::before {
-  position: absolute;
-  width: 15px;
-  height: 1px;
-  top: 50%;
-  left: -30px;
-  background-color: #000;
-  content: "";
-}
-.lower-contents-wrapper section .lower-small-title::after {
-  position: absolute;
-  width: 15px;
-  height: 1px;
-  top: 50%;
-  right: -30px;
-  background-color: #000;
-  content: "";
-}
-@media (min-width: 768px) {
-  .lower-contents-wrapper section .lower-small-title {
-    font-size: 24px;
-  }
-}
-.lower-contents-wrapper section .lower-small-subtitle {
-  position: relative;
-  margin-bottom: 60px;
-  font-size: 20px;
-  line-height: 1.5;
-}
-.lower-contents-wrapper section .lower-small-subtitle span {
-  padding-right: 20px;
-  background-color: #fff;
-}
-.lower-contents-wrapper section .lower-small-subtitle span::after {
-  position: absolute;
-  width: 100%;
-  height: 1px;
-  top: 15px;
-  right: 0;
-  background-color: #000;
-  content: "";
-  z-index: -1;
-}
-.lower-contents-wrapper section strong {
-  display: block;
-  margin-bottom: 45px;
-  line-height: 1.5;
-  text-align: center;
-}
-.lower-contents-wrapper section .lower-detail-wrapper {
-  padding: 0;
-  margin-bottom: 60px;
-}
-.lower-contents-wrapper section .lower-detail-wrapper a {
-  display: block;
-  margin-bottom: 30px;
-}
-.lower-contents-wrapper section .lower-detail-wrapper p {
-  margin-bottom: 30px;
-  line-height: 1.5;
-}
-.lower-contents-wrapper section .lower-detail-wrapper p:last-of-type {
-  margin-bottom: 0;
-}
-.lower-contents-wrapper section .lower-image-small-wrapper {
-  margin-bottom: 15px;
-  text-align: center;
-}
-.lower-contents-wrapper section .lower-image-small-wrapper .lower-image-small {
-  display: block;
-  width: 64px;
-  height: 126px;
-  margin: 0 auto;
-  background-color: #CCC;
-}
-.lower-contents-wrapper section .lower-image-small-wrapper p {
-  line-height: 1.5;
-}
-.lower-contents-wrapper section .lower-image-large-wrapper {
-  padding: 0;
-  margin-bottom: 45px;
-}
-.lower-contents-wrapper section .lower-image-large-wrapper .lower-image-large {
-  display: block;
-  width: 100%;
-  height: 300px;
-  margin-bottom: 30px;
-  background-color: #CCC;
-  flex-basis: auto;
-}
-.lower-contents-wrapper section .lower-image-large-wrapper .lower-image-history {
-  display: block;
-  width: 100%;
-  max-width: 400px;
-  margin: 0 auto;
-}
-.lower-contents-wrapper section .lower-image-large-wrapper img {
-  display: block;
-  width: 100%;
-  height: 300px;
-  margin-bottom: 30px;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-.lower-contents-wrapper section .lower-making-parts .lower-image-large-wrapper img {
-  height: auto;
-}
-.lower-contents-wrapper section .lower-use-example {
-  margin-bottom: 0;
-}
-.lower-contents-wrapper section .lower-use-example img {
-  height: auto;
-}
-@media (min-width: 1200px) {
-  .lower-contents-wrapper section .lower-use-example img {
-    height: 300px;
-  }
-}
-.lower-contents-wrapper section .lower-cooperative-chairman .lower-detail-wrapper {
-  padding: 0 15px;
-}
-.lower-contents-wrapper section .lower-cooperative-chairman .lower-image-large-wrapper {
-  padding: 0 15px;
-}
-.lower-contents-wrapper section .lower-cooperative-chairman .lower-image-large-wrapper img {
-  height: auto;
-}
-@media (min-width: 1200px) {
-  .lower-contents-wrapper section .lower-cooperative-chairman .lower-image-large-wrapper img {
-    height: 500px;
-  }
-}
-.lower-contents-wrapper section .lower-cooperative-chairman .lower-image-large-wrapper p {
-  text-align: center;
-}
-.lower-contents-wrapper section .lower-access-entrance img {
-  height: auto;
-}
-@media (min-width: 1200px) {
-  .lower-contents-wrapper section .lower-access-entrance img {
-    height: 480px;
-  }
-}
-.lower-contents-wrapper section table {
-  width: 100%;
-  margin: 0 auto 60px;
-}
-.lower-contents-wrapper section table tr {
-  width: 100%;
-  border-top: 1px solid #CCC;
-}
-.lower-contents-wrapper section table tr:last-of-type {
-  border-bottom: 1px solid #CCC;
-}
-.lower-contents-wrapper section table tr td {
-  padding: 8px 4px;
-  line-height: 1.5;
-  vertical-align: top;
-}
-.lower-contents-wrapper section .lower-square-list {
-  list-style: square;
-}
-.lower-contents-wrapper section .lower-square-list li {
-  padding: 8px;
-}
-.lower-contents-wrapper section .lower-circle-list {
-  list-style: disc;
-}
-.lower-contents-wrapper section .lower-circle-list li {
-  padding: 8px;
-}
-.lower-contents-wrapper section .access-iframe iframe {
-  display: block;
-  width: 100%;
-  height: 300px;
-  margin: 0 auto 60px;
-}
-@media (min-width: 768px) {
-  .lower-contents-wrapper section .access-iframe iframe {
-    height: 500px;
-  }
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
