--- a/liff/scss/style.scss
+++ b/liff/scss/style.scss
@@ -10,18 +10,22 @@ body{
 
   .form-question-title{
     display: flex;
+    width: 100%;
     background-color: #98AFD7;
 
-    &:first-of-type{
-      width: 8em;
-      margin: 0 2em 0 0;
+    p{
+      &:first-of-type{
+        width: 8em;
+        margin: 0 2em 0 0;
+      }
+  
+      &:nth-of-type(2){
+        width: 2em;
+        padding: 8px;
+        background-color: #93AAD4;
+      }
     }
 
-    &:nth-of-type(2){
-      width: 2em;
-      padding: 8px;
-      background-color: #93AAD4;
-    }
   }
 }
 
