--- a/liff/scss/style.scss
+++ b/liff/scss/style.scss
@@ -4,23 +4,24 @@ body{
 }
 
 .form-question{
-  padding: 8px;
   border-radius: 4px;
-  margin-bottom: 0 0 24px;
+  margin: 0 0 24px;
 
   .form-question-title{
     display: flex;
     width: 100%;
+    padding: 8px;
     background-color: #98AFD7;
 
     p{
       &:first-of-type{
         width: 8em;
+        line-height: 40px;
         margin: 0 2em 0 0;
       }
   
       &:nth-of-type(2){
-        width: 2em;
+        width: 3em;
         padding: 8px;
         background-color: #93AAD4;
       }
@@ -32,12 +33,12 @@ body{
 .form-submit{
   width: 100%;
   height: 48px;
-  background-color: #94DF84;
 
   input{
     display: block;
     width: 100%;
     height: 100%;
     color: #fff;
+    background-color: #94DF84;
   }
 }
