--- a/liff/scss/style.css
+++ b/liff/scss/style.css
@@ -1,27 +1,32 @@
 @charset "UTF-8";
 body {
   font-family: "源ノ角ゴシック JP", sans-serif;
+  background-color: #edf1f3;
 }
 
 .form-question {
   border-radius: 4px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
   margin: 0 0 24px;
 }
 .form-question .form-question-title {
   display: flex;
   width: 100%;
   padding: 8px;
-  background-color: #98AFD7;
+  margin: 0 0 16px;
 }
 .form-question .form-question-title p:first-of-type {
   width: 8em;
   line-height: 40px;
+  font-weight: bold;
   margin: 0 2em 0 0;
 }
 .form-question .form-question-title p:nth-of-type(2) {
   width: 3em;
   padding: 8px;
-  background-color: #93AAD4;
+  color: #fff;
+  margin: 0;
+  background: linear-gradient(90deg, rgb(35, 88, 148) 0%, rgb(85, 120, 180) 50%, rgb(70, 170, 181) 100%);
 }
 
 .form-submit {
@@ -32,7 +37,8 @@ body {
   display: block;
   width: 100%;
   height: 100%;
+  border: 0;
   color: #fff;
-  background-color: #94DF84;
+  background: linear-gradient(90deg, rgb(35, 88, 148) 0%, rgb(85, 120, 180) 50%, rgb(70, 170, 181) 100%);
 }
 /*# sourceMappingURL=style.css.map */
