--- a/liff/scss/style.scss
+++ b/liff/scss/style.scss
@@ -1,29 +1,34 @@
 
 body{
   font-family: "源ノ角ゴシック JP", sans-serif;
+  background-color: #edf1f3;
 }
 
 .form-question{
   border-radius: 4px;
+  box-shadow: 0 0 4px rgb(0 0 0 / 20%);
   margin: 0 0 24px;
 
   .form-question-title{
     display: flex;
     width: 100%;
     padding: 8px;
-    background-color: #98AFD7;
+    margin: 0 0 16px;
 
     p{
       &:first-of-type{
         width: 8em;
         line-height: 40px;
+        font-weight: bold;
         margin: 0 2em 0 0;
       }
   
       &:nth-of-type(2){
         width: 3em;
         padding: 8px;
-        background-color: #93AAD4;
+        color: #fff;
+        margin: 0;
+        background: linear-gradient(90deg, rgba(35,88,148,1) 0%, rgba(85,120,180,1) 50%, rgba(70,170,181,1) 100%);
       }
     }
 
@@ -38,7 +43,8 @@ body{
     display: block;
     width: 100%;
     height: 100%;
+    border: 0;
     color: #fff;
-    background-color: #94DF84;
+    background: linear-gradient(90deg, rgba(35,88,148,1) 0%, rgba(85,120,180,1) 50%, rgba(70,170,181,1) 100%);
   }
 }
