--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -15,12 +15,12 @@
       入力情報の確認
     </p>
 
-    <p>名前:<%= name %></p>
-    <p>日付:<%= date %></p>
-
     <form>
       <input type="text" name="name" value=<%= name %>>
+      <input type="email" name="email" value=<%= email %>>
+      <input type="tel" name="tel" value=<%= tel %>>
       <input type="date" name="date" value=<%= date %>>
+      <input type="text" name="time" value=<%= time %>>
       <input type="submit" value="送信する">
     </form>
 
@@ -66,7 +66,7 @@
             $('form').submit(function () {
                 const name    = $('input[name="name"]').val();
                 const date = $('input[name="date"]').val();
-                const msg = `${name}\n${date}\n`;
+                const msg = `${name}\n${email}\n${tel}\n${date}\n${time}`;
                 sendText(msg);
                 return false;
             });
