--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -65,7 +65,10 @@
         $(function () {
             $('form').submit(function () {
                 const name    = $('input[name="name"]').val();
+                const email = $('input[name="email"]').val();
+                const tel = $('input[name="tel"]').val();
                 const date = $('input[name="date"]').val();
+                const time = $('input[name="time"]').val();
                 const msg = `${name}\n${email}\n${tel}\n${date}\n${time}`;
                 sendText(msg);
                 return false;
