--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,46 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LIFF Handson</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+  <title>予約管理画面</title>
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="scss/style.css">
+  <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/config.js" charset="utf-8"></script>
 </head>
 <body>
   <div class="container">
-    <h1>LIFF EXAMPLE EJS</h1>
+    <h1>予約管理画面</h1>
 
-    <p>
-      <span id="line-name"></span> さんのTODO
-    </p>
+    <input type="month" name="month">
 
-    <form action="/confirm" method="post">
-        <input type="text" name="name">
-        <input type="date" name="date">
-        <input type="submit" value="送信する">
-    </form>
+    <table class="calendar">
 
-    <form>
+      <tr>
+        <th>日</th><th>月</th><th>火</th><th>水</th><th>木</th><th>金</th><th>土</th>
+      </tr>
+
+      <tr>
+        <td></td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><td>6</td>
+      </tr>
+
+      <tr>
+        <td>7</td><td>8</td><td>9</td><td>10</td><td>11</td><td>12</td><td>13</td>
+      </tr>
+
+      <tr>
+        <td>14</td><td>15</td><td>16</td><td>17</td><td>18</td><td>19</td><td>20</td>
+      </tr>
+
+      <tr>
+        <td>21</td><td>22</td><td>23</td><td>24</td><td>25</td><td>26</td><td>27</td>
+      </tr>
+
+      <tr>
+        <td>28</td><td>29</td><td>30</td><td>31</td><td></td><td></td><td></td>
+      </tr>
+
+    </table>
+
   </div>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  <!-- LIFF SDK の読み込み -->
-  <script charset="utf-8" src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
-  <!-- LIFF Setup -->
-    <script>
-        (async function () {
-        await liff.init({liffId: "1661034918-8pzaYWXE"})
-        if (!liff.isLoggedIn()) {
-            liff.login();
-        }
-
-        // LINE ID情報の取得
-        const profile = await liff.getProfile();
-        console.log(profile)
-        }())
-
-
-    </script>
 </body>
 </html>
