--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>予約管理画面</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="scss/style.css">
+  <link rel="stylesheet" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="./scss/style.css">
   <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
   <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.4.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/config.js" charset="utf-8"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/config.js" charset="utf-8"></script>
 </head>
 <body>
   <div class="container">
