--- a/liff/scss/style.css
+++ b/liff/scss/style.css
@@ -4,52 +4,47 @@ body {
   background-color: #edf1f3;
 }
 
-form {
-  padding: 32px 0;
+a {
+  color: #000;
+  text-decoration: none;
 }
 
-.form-question {
-  border-radius: 4px;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-  margin: 0 0 24px;
+input {
+  margin: 0 0 32px;
+}
+
+.calendar {
+  border: 1px solid #000;
+  text-align: center;
+}
+.calendar tr {
+  border-bottom: 1px solid #000;
+}
+.calendar tr:last-of-type {
+  border-bottom: 0;
+}
+.calendar th {
+  padding: 12px;
+  border-right: 1px solid #000;
   background-color: #fff;
 }
-.form-question:last-of-type {
-  margin: 0;
+.calendar th:first-of-type {
+  background-color: rgba(232, 99, 86, 0.5);
 }
-.form-question .form-question-title {
-  display: flex;
-  width: 100%;
-  padding: 8px;
-  margin: 0 0 16px;
+.calendar th:last-of-type {
+  border-right: 0;
+  background-color: rgba(58, 150, 212, 0.5);
 }
-.form-question .form-question-title p:first-of-type {
-  width: 8em;
-  line-height: 40px;
-  font-weight: bold;
-  margin: 0 2em 0 0;
+.calendar td {
+  padding: 12px;
 }
-.form-question .form-question-title p:nth-of-type(2) {
-  width: 3em;
-  padding: 8px;
-  color: #fff;
-  margin: 0;
-  background: linear-gradient(90deg, rgb(35, 88, 148) 0%, rgb(85, 120, 180) 50%, rgb(70, 170, 181) 100%);
+.calendar td:first-of-type {
+  color: rgb(232, 99, 86);
+  background-color: rgba(232, 99, 86, 0.5);
 }
-.form-question input {
-  margin: 0 0 16px 8px;
-}
-
-.form-submit {
-  width: 100%;
-  height: 48px;
-}
-.form-submit input {
-  display: block;
-  width: 100%;
-  height: 100%;
-  border: 0;
-  color: #fff;
-  background: linear-gradient(90deg, rgb(35, 88, 148) 0%, rgb(85, 120, 180) 50%, rgb(70, 170, 181) 100%);
+.calendar td:last-of-type {
+  border-right: 0;
+  color: rgb(58, 150, 212);
+  background-color: rgba(58, 150, 212, 0.5);
 }
 /*# sourceMappingURL=style.css.map */
