--- a/liff/scss/style.scss
+++ b/liff/scss/style.scss
@@ -33,27 +33,29 @@ input{
     background-color: #fff;
 
     &:first-of-type{
-      background-color: rgba(232, 99, 86, 0.5);
-    }
-
-    &:last-of-type{
-      border-right: 0;
-      background-color: rgba(58,150,212,0.5);
-    }
-  }
-
-  td{
-    padding: 12px;
-
-    &:first-of-type{
       color: rgba(232, 99, 86, 1);
-      background-color: rgba(232, 99, 86, 0.5);
+      background-color: rgba(232, 99, 86, 0.2);
     }
 
     &:last-of-type{
       border-right: 0;
       color: rgba(58,150,212, 1);
-      background-color: rgba(58,150,212,0.5);
+      background-color: rgba(58,150,212,0.2);
+    }
+  }
+
+  td{
+    padding: 12px;
+    border-right: 1px solid #000;
+    background-color: #fff;
+
+    &:first-of-type{
+      background-color: rgba(232, 99, 86, 0.2);
+    }
+
+    &:last-of-type{
+      border-right: 0;
+      background-color: rgba(58,150,212,0.2);
     }
   }
 
