--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
   <div class="container">
     <h1>予約管理画面</h1>
 
-    <input type="month" name="month">
+    <input type="month" name="month" value=<%= this_month%> min=<%= this_month%> max=<%= max_month%>>
 
     <table class="calendar">
 
