--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,8 @@
 
     <input type="month" name="month" value=<%= this_month%> min=<%= this_month%> max=<%= max_month%>>
 
+    データ：<%= data%>
+
     <table class="calendar">
 
       <tr>
