--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,7 +18,7 @@
 
     <input type="month" name="month" value=<%= this_month%> min=<%= this_month%> max=<%= max_month%>>
 
-    データ：<%= data%>
+    データ：<%= data[0]%><%= data[1]%><%= data[2]%><%= data[3]%>
 
     <table class="calendar">
 
