--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,9 +21,7 @@
     データ：<%= row1%><%= row2%><%= row3%>
 
     <% for (var item of data) { %>
-      <% for (var value of data[item]) { %>
-        <p> <%= value%></p>
-      <% } %>
+        <p> <%= item%></p>
     <% } %>
 
     <table class="calendar">
