--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,14 +18,14 @@
 
     <input type="month" name="month" value=<%= this_month%> min=<%= this_month%> max=<%= max_month%>>
 
-    データ：<%= row1%><%= row2%><%= row3%>
+    データ：<%= row1%><%= row2%><%= row3%><%= row4%>
 
     <% var size = data.length %>
-    <% for (var i=0; i<size; i++) { %>
+    <!-- <% for (var i=0; i<size; i++) { %>
       <% data[i].forEach(function (value, key) { %>
         <p><%= key %>: <%= value %></p>
       <% }); %>
-    <% } %>
+    <% } %> -->
 
     <table class="calendar">
 
